deploy/ingress/canary/cookie/canary-ingress.yaml
# production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true" # enable canary 
    nginx.ingress.kubernetes.io/canary-by-cookie: "beijing"
spec:
  rules:
  - host: echo.autumn.com
    http:
      paths:
      - backend:
          serviceName: canary
          servicePort: 80
